--- a/plugins/com.phonegap.plugins.PushPlugin/plugin.xml
+++ b/plugins/com.phonegap.plugins.PushPlugin/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="com.phonegap.plugins.PushPlugin"
-    version="2.0.1">
+    version="2.1.1">
 
     <name>PushPlugin</name>
 	<author>Bob Easterday</author>
@@ -12,8 +12,10 @@
 	</description>
 
 	<license>MIT</license>
-
-	<asset src="www/PushNotification.js" target="PushNotification.js" />
+	
+	<js-module src="www/PushNotification.js" name="PushNotification">
+   	<clobbers target="PushNotification" />
+	</js-module>
 
 	<engines>
 		<engine name="cordova" version=">=3.0.0" />
@@ -32,6 +34,7 @@
 			<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 			<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 			<uses-permission android:name="android.permission.WAKE_LOCK" />
+			<uses-permission android:name="android.permission.VIBRATE"/>
 			<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 			<permission android:name="$PACKAGE_NAME.permission.C2D_MESSAGE" android:protectionLevel="signature" />
 			<uses-permission android:name="$PACKAGE_NAME.permission.C2D_MESSAGE" />
