iOS app with push notification and icon changes

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ platforms/android/bin/*.ap_
 platforms/android/bin/Curious.ap_.d
 platforms/android/bin/build.prop
 platforms/android/assets/*
+www/res_old/*
 .project
