Cleaning up and making www a lighter folder to build cordova apps #7

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ platforms/android/bin/Curious.ap_.d
 platforms/android/bin/build.prop
 platforms/android/assets/*
 www/res_old/*
+www
 .project
 dropbox-link
