--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "www"]
 	path = www
 	url = git@github.com:syntheticzero/curiousmobile.git
+[submodule "famous-app"]
+	path = famous-app
+	url = git@github.com:syntheticzero/curiousmobile.git
