--- a/plugins/org.apache.cordova.labs.keyboard/plugin.xml
+++ b/plugins/org.apache.cordova.labs.keyboard/plugin.xml
@@ -3,7 +3,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:rim="http://www.blackberry.com/ns/widgets"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="org.apache.cordova.keyboard"
+    id="org.apache.cordova.labs.keyboard"
     version="0.1.2">
     <name>Keyboard</name>
     <description>Cordova Keyboard Plugin</description>
